<resources>
    <string name="app_name">St{au}cktion</string>
    <string name="gps_is_on">GPS is ON</string>
    <string name="gps_is_off">GPS is OFF</string>
    <string name="web_client_id">915340788300-eu7tgguv90ghc9horj0rmqc7fe3t3qh0.apps.googleusercontent.com</string>
    <string name="home_page">Home Page</string>
    <string name="logout">Logout</string>
    <string name="user_name">John Doe</string>
    <string name="user_email">john.doe@example.com</string>
    <string name="default_profile_image">Profile Image</string>
    <string name="profile_btn">Profile</string>
    <string name="open_camera">Open Camera</string>
    <string name="login_google">Log in with Google</string>
    <string name="login_email">Log in with Email</string>
    <!-- Text for the upload instructions/status TextView -->
    <string name="upload_instructions">Select a photo to upload</string>

    <!-- Content description for the preview ImageView -->
    <string name="upload_preview_desc">Preview of the selected photo</string>

    <!-- Text for the top (white) button -->
    <string name="select_photo">Select Photo</string>

    <!-- Text for the bottom (black) button -->
    <string name="upload">Upload</string>
    <string name="open_menu">Open Menu</string>
    <string name="select_category">Select Theme</string>
    <string name="enter_new_category">Enter new theme name</string>
    <string name="slogan">The best stock photos shared by creators and travelers.</string>
    <string name="no_categories">No themes found for this location. Please create a new theme.</string>
    <string name="create_new_category">Create new theme</string>
    <string name="uploading">Uploading</string>
    <string name="clear_theme">Clear theme</string>
    <string name="show_themes">Show Themes</string>

</resources>