<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="?attr/colorSurface">

    <!-- Profile Image -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        android:layout_width="136dp"
        android:layout_height="132dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/circular_background"
        android:scaleType="centerCrop"
        android:src="@drawable/default_profile"
        android:text="@string/default_profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- User's Name -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_name"
        android:textColor="?attr/colorOnSurface"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImage" />

    <!-- User's Email -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profileEmail"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/user_email"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileName"
        tools:ignore="TextSizeCheck" />

    <!-- Edit Profile Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_edit_profile"
        android:elevation="2dp"
        android:fontFamily="sans-serif-medium"
        android:paddingVertical="12dp"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileEmail"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />


    <!-- Logout Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/black"
        android:drawableLeft="@drawable/ic_logout"
        android:elevation="2dp"
        android:fontFamily="sans-serif-medium"
        android:paddingVertical="12dp"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEditProfile"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
